# rivals-rs

./: Cargo.toml  README.md
src/: client.rs  error.rs  lib.rs
src/models/: battlepass.rs  hero.rs  hero_stats.rs  item.rs  leaderboard.rs  match_.rs  match_history.rs  mod.rs  player_info.rs  skin.rs
tests/: battlepass.rs  hero_stats.rs  heroes.rs  items.rs  leaderboard.rs  match.rs  match_history.rs  skin.rs  skins.rs
tests/data/: battlepass.json  hero_stats.json  heroes.json  items.json  leaderboard.json  match.json  match_history.json  skin.json  skins.json
